// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PureStackCardActions Should not render edit and delete buttons if current user is not the owner 1`] = `
<div
  className="cardActions"
>
  <ComponentWrapper
    className="buttonWrapper"
    permission="open"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <PrimaryActionButton
      disabled={false}
      fullWidth={true}
      onClick={[Function]}
    >
      Open
    </PrimaryActionButton>
  </ComponentWrapper>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    anchorOrigin={
      Object {
        "horizontal": "center",
        "vertical": "center",
      }
    }
    id="more-menu"
    keepMounted={true}
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
  />
</div>
`;

exports[`PureStackCardActions creates correct snapshot 1`] = `
<div
  className="cardActions"
>
  <ComponentWrapper
    className="buttonWrapper"
    permission="open"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <PrimaryActionButton
      disabled={false}
      fullWidth={true}
      onClick={[Function]}
    >
      Open
    </PrimaryActionButton>
  </ComponentWrapper>
  <ComponentWrapper
    className="buttonWrapper"
    permission="delete"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Button))
      aria-controls="more-menu"
      aria-haspopup="true"
      color="primary"
      onClick={[Function]}
      variant="outlined"
    >
      <MoreVertIcon />
    </WithStyles(ForwardRef(Button))>
  </ComponentWrapper>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    anchorOrigin={
      Object {
        "horizontal": "center",
        "vertical": "center",
      }
    }
    id="more-menu"
    keepMounted={true}
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
  >
    <ComponentWrapper
      permission="edit"
      userPermissions={
        Array [
          "open",
          "delete",
          "edit",
        ]
      }
    >
      <WithStyles(ForwardRef(MenuItem))
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
      >
        Edit
      </WithStyles(ForwardRef(MenuItem))>
    </ComponentWrapper>
    <ComponentWrapper
      permission="delete"
      userPermissions={
        Array [
          "open",
          "delete",
          "edit",
        ]
      }
    >
      <WithStyles(ForwardRef(MenuItem))
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
      >
        Delete
      </WithStyles(ForwardRef(MenuItem))>
    </ComponentWrapper>
  </WithStyles(ForwardRef(Menu))>
</div>
`;

exports[`StackCardActions passes props down to child component as well as current user id 1`] = `
<PureStackCardActions
  classes={
    Object {
      "buttonWrapper": "StackCardActions-buttonWrapper-2",
      "cardActions": "StackCardActions-cardActions-1",
    }
  }
  currentUserId="owner-id"
  deletePermission="delete"
  deleteStack={[MockFunction]}
  editPermission="edit"
  editStack={[MockFunction]}
  openPermission="open"
  openStack={[MockFunction]}
  stack={
    Object {
      "displayName": "expectedDisplayName",
      "id": "abc1234",
      "status": "ready",
      "type": "expectedType",
      "users": Array [
        "owner-id",
      ],
    }
  }
  userPermissions={
    Array [
      "open",
      "delete",
      "edit",
    ]
  }
/>
`;
